[Home] Correct display bug on top of the homepage on mobile

--- a/src/styles/_annexes.styl
+++ b/src/styles/_annexes.styl
@@ -13,14 +13,15 @@
 		background #fff url(../images/bkg-home-fr@2x.png) no-repeat 50% 100% / cover
 
 		+bp-max(md)
-			background #fff url(../images/bkg-home-fr@2x.png) no-repeat 78% 201px / cover
-			background-size 300%
+			background #fff url(../images/bkg-home-fr@2x.png) no-repeat 80% 110%
+			background-size 150vh
 
 	&.homepage.en
 		background #fff url(../images/bkg-home-en@2x.png) no-repeat 50% 100% / cover
 
-	&.homepage.en
-		background #fff url(../images/bkg-home-en@2x.png) no-repeat 50% 100% / cover
+		+bp-max(md)
+			background #fff url(../images/bkg-home-en@2x.png) no-repeat 80% 110%
+			background-size 150vh
 
 	&.about
 		background #000 url(../images/about/bkg-team@2x.jpg) no-repeat 50% 0 / cover
