--- a/src/styles/_homepage.styl
+++ b/src/styles/_homepage.styl
@@ -15,11 +15,15 @@
 		padding-bottom 24vh
 
 		+bp-max(md)
-			padding-top 4vh
-			height 110vh
+			padding-top 12vh
+			height 100vh
+			text-align center
 
 	.introduction-title
 		text-align left
+
+		+bp-max(md)
+			text-align center
 
 	.introduction-content
 		text-align left
